pkg/check/testdata/ub/types/valid/nullable-default-omitted.ub
resources: {
  server: ext.server {
    name: 'omitted'
  }
}
