pkg/check/testdata/ub/types/invalid/missing-reference-inputs.ub
resources: {
  bucket: ext.bucket {
    name: 'missing references'
  }
}
